
<resources>
    <string name="app_name">Inventory App</string>

    <string name="update_product">Update Id # </string>
    <string name="details_product">Product # </string>
    <string name="add_product">Add new product</string>
    <string name="catalog_label">[ %d ] items result of</string>
    <string name="empty_text_msg">No Products!</string>
    <string name="no_data_for_input_value_msg">No Products</string>
    <string name="put_value_text_msg">Please, Enter a value then click show button\nto display the
        data\nor choose other choice to display the data</string>


    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="save_changes_dialog_msg">You have updated some fields.\nDo you still wish to save?</string>
    <string name="delete_all_items_dialog_msg">You are about deleting all items
        \nAre you sure you want to continue?</string>
    <string name="delete_one_item_dialog_msg">You are about deleting this item
        \nAre you sure you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="save_changes">Save changes</string>

    <string name="description_synced_item">description_synced_item</string>
    <string name="description_favoured_item">description_favoured_item</string>
    <string name="settings_label">Settings</string>

    <string name="out_of_stock">Out of stock</string>
    <string name="free_item">Free</string>

    <string name="title_fragment0">All Products</string>
    <string name="title_fragment1">favoured</string>


    <string name="action_insert_dummy_item">Insert dummy item</string>
    <string name="action_fill_fields_with_dummy_data">Fill fields with dummy data</string>
    <string name="action_delete_all_items">Delete all items</string>
    <string name="action_delete_last_row">Delete this item</string>
    <string name="action_reload_data">Reload data</string>

    <string name="action_save">Save</string>

    <string name="product_name">Product Name :</string>
    <string name="product_code">Product Code :</string>
    <string name="product_price">Product Price :</string>
    <string name="product_quantity">Product Quantity :</string>
    <string name="quantity_label">Quantity : </string>
    <string name="supplier_name">Supplier Name :</string>
    <string name="supplier_phone">Supplier Phone :</string>
    <string name="product_description">Description :</string>
    <string name="label_image">Product Images :</string>
    <string name="product_category">Product Category :</string>
    <string name="change_image">Click to change the image :</string>
    <string name="but_sale_label">+ Sale</string>

    <string name="count_msg">( %d ) items</string>
    <string name="error_with_saving_product"> Important values are missed check entered values again please </string>
    <string name="product_saved_with_row"> Product saved successfully @id = </string>
    <string name="product_deleted_with_row"> Product deleted successfully </string>
    <string name="error_displaying_data"> Please check Logs, Cannot display this data due to invalid uri :</string>
    <string name="error_inserting_data"> Please check Logs, Cannot insert data the uri : </string>
    <string name="error_updating_data"> Please check Logs, Cannot update data the uri : </string>
    <string name="error_deleting_data"> Please check Logs, Cannot delete this items : </string>
    <string name="repeated_input_value"> this %s already entered before @id = %d</string>
    <string name="invalid_input_user_catalog_activity"> invalid value you should enter numbers up to %s digits</string>
    <string name="all_items_deleted">rows had been Deleted </string>

    <string name="error_text">%s must begin with a letter and length %d - %d\n
    No spaces or special characters allowed</string>
    <string name="error_numeric_value">The %s can not be null, but can be 0</string>
    <string name="error_supp_phone">Phone number length must be %d - %d</string>
    <string name="error_description">description cannot be more than 1000 letters</string>
    <string name="error_operation">Cannot do this operation</string>
    <string name="error_input_number">Please Enter a valid number </string>


    <string name="description_error_image_view_fragment_item">description_error_image_view_fragment_item</string>
    <string name="title_preference_category_un_synced_products">Preferences</string>
    <string name="tag_Icons_off">off</string>
    <string name="tag_Icons_on">on</string>
    <string name="item_image_description">item_image_description</string>
    <string name="share_product">Share Product</string>
    <string name="shopping_car_icon_description">shopping_car_icon_description</string>
    <string name="shopping_car_counter">0</string>
    <string name="item_arrow_down_description">item_arrow_down_description</string>
    <string name="item_arrow_up_description">item_arrow_up_description</string>
    <string name="call_icon_description">call_icon_description</string>


</resources>
