
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app_republic.inventoryapp.EditorActivity">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_this_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete_last_row"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_product"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_product"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/action_fill_fields_with_dummy_data"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="never" />


</menu>
