<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_margin_value_4spaces"
    tools:context=".EditorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_margin_value_4spaces">

        <!-- product name label , edit text and error msg -->
        <include
            layout="@layout/items_icons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/padding_margin_value_8spaces"
            android:layout_marginRight="@dimen/padding_margin_value_8spaces" />

        <TextView
            android:id="@+id/item_name_label"
            style="@style/labels_text_views_style"
            android:text="@string/product_name"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/input_name"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/product_name"
            android:inputType="text"
            android:maxLength="@integer/text_max_length" />

        <TextView
            android:id="@+id/error_msg_name"
            style="@style/error_msg_text_views_style"
            tools:text="@string/error_text" />

        <!-- product code label , edit text and error msg -->
        <TextView
            android:id="@+id/item_code_label"
            style="@style/labels_text_views_style"
            android:text="@string/product_code"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/input_code"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/product_code"
            android:inputType="text"
            android:maxLength="@integer/text_max_length" />

        <TextView
            android:id="@+id/error_msg_code"
            style="@style/error_msg_text_views_style"
            tools:text="@string/error_text" />

        <!-- product category label , edit text and error msg -->
        <TextView
            android:id="@+id/item_category_label"
            style="@style/labels_text_views_style"
            android:text="@string/product_category"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/input_category"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/product_category"
            android:inputType="text"
            android:maxLength="@integer/text_max_length" />

        <TextView
            android:id="@+id/error_msg_category"
            style="@style/error_msg_text_views_style"
            tools:text="@string/error_text" />

        <!-- product price label , edit text and error msg -->
        <TextView
            android:id="@+id/item_price_label"
            style="@style/labels_text_views_style"
            android:text="@string/product_price"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/input_price"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/product_price"
            android:inputType="number"
            android:maxLength="@integer/quantity_max_length" />

        <TextView
            android:id="@+id/error_msg_price"
            style="@style/error_msg_text_views_style"

            tools:text="@string/error_numeric_value" />

        <!-- product quantity label , edit text and error msg -->
        <TextView
            android:id="@+id/item_quantity_label"
            style="@style/labels_text_views_style"
            android:text="@string/product_quantity"
            android:textColor="@color/label_text_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/quantity_down_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/item_arrow_down_description"
                android:src="@drawable/arrow_down" />

            <EditText
                android:id="@+id/input_quantity"
                style="@style/edit_text_style"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/shopping_car_counter"
                android:inputType="number"
                android:text="@string/shopping_car_counter"
                android:textIsSelectable="false" />

            <ImageView
                android:id="@+id/quantity_up_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/padding_margin_value_24spaces"
                android:layout_marginRight="@dimen/padding_margin_value_24spaces"
                android:contentDescription="@string/item_arrow_up_description"
                android:src="@drawable/arrow_up" />
        </LinearLayout>

        <TextView
            android:id="@+id/error_msg_quantity"
            style="@style/error_msg_text_views_style"
            tools:text="@string/error_numeric_value" />

        <!-- product supplier name label , edit text and error msg  -->
        <TextView
            android:id="@+id/item_supp_name_label"
            style="@style/labels_text_views_style"
            android:text="@string/supplier_name"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/input_supplier_name"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/supplier_name"
            android:inputType="text"
            android:maxLength="@integer/text_max_length" />

        <TextView
            android:id="@+id/error_msg_supplier_name"
            style="@style/error_msg_text_views_style"

            tools:text="@string/error_text" />

        <!-- product supplier phone label , edit text and error msg -->
        <TextView
            android:id="@+id/item_supp_phone_item_label"
            style="@style/labels_text_views_style"
            android:text="@string/supplier_phone"
            android:textColor="@color/label_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginEnd="@dimen/padding_margin_value_8spaces"

                android:contentDescription="@string/call_icon_description"
                app:srcCompat="@android:drawable/sym_action_call" />

            <EditText
                android:id="@+id/input_supplier_phone"
                style="@style/edit_text_style"
                android:hint="@string/supplier_phone"
                android:inputType="phone"
                android:maxLength="@integer/phone_number_max_length" />
        </LinearLayout>

        <TextView
            android:id="@+id/error_msg_supplier_phone"
            style="@style/error_msg_text_views_style"
            tools:text="@string/error_supp_phone" />

        <!-- product image label , images  -->

        <ImageView
            android:id="@+id/image"
            style="@style/image_views_style"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/change_image" />

        <!-- product description label , edit text and error msg -->
        <TextView
            android:id="@+id/item_description_label"
            style="@style/labels_text_views_style"
            android:text="@string/product_description"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/input_description"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:height="@dimen/description_edit_text_height"
            android:hint="@string/product_description"
            android:inputType="text"
            android:maxLength="@integer/description_max_length"
            android:singleLine="false" />

        <TextView
            android:id="@+id/error_msg_description"
            style="@style/error_msg_text_views_style"
            tools:text="@string/error_description" />

    </LinearLayout>


</ScrollView>