<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/product_selector"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_margin_value_4spaces"
        android:padding="@dimen/padding_margin_value_4spaces">

        <!-- item id -->

        <!-- item category-->
        <TextView
            android:id="@+id/item_category"
            style="@style/item_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/padding_margin_value_4spaces"
            android:layout_marginRight="@dimen/padding_margin_value_4spaces"
            android:background="@drawable/round_bac"
            android:padding="5dp"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/quantity_text_size"
            tools:text="@string/product_category" />

        <!-- item main image-->
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="@dimen/item_image_size"
            android:layout_height="@dimen/item_image_size"
            android:layout_below="@+id/item_category"
            android:layout_marginLeft="@dimen/padding_margin_value_4spaces"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/padding_margin_value_4spaces"
            android:contentDescription="@string/item_image_description"
            tools:src="@drawable/photo" />

        <!-- item name -->
        <TextView
            android:id="@+id/item_name"
            style="@style/item_text_style"
            android:layout_alignTop="@+id/item_image"
            android:layout_marginStart="@dimen/padding_margin_value_4spaces"
            android:layout_marginLeft="@dimen/padding_margin_value_4spaces"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/add_sale"
            android:layout_toRightOf="@+id/item_image"
            android:textSize="@dimen/name_text_size"
            tools:text="@string/product_name" />

        <!-- item code -->
        <TextView
            android:id="@+id/item_code"
            style="@style/item_text_style"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="@dimen/padding_margin_value_4spaces"
            android:layout_marginLeft="@dimen/padding_margin_value_4spaces"
            android:layout_marginTop="@dimen/padding_margin_value_4spaces"
            android:layout_toLeftOf="@+id/add_sale"
            android:layout_toRightOf="@+id/item_image"
            android:textSize="@dimen/code_text_size"
            tools:text="@string/product_code" />

        <!-- item quantity -->
        <TextView
            android:id="@+id/item_quantity"
            style="@style/item_text_style"
            android:layout_below="@+id/item_image"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/quantity_text_size"
            tools:text="@string/product_quantity" />

        <!-- item price-->
        <TextView
            android:id="@+id/item_price"
            style="@style/item_text_style"
            android:layout_below="@+id/item_image"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding_margin_value_4spaces"
            android:layout_marginBottom="@dimen/padding_margin_value_4spaces"
            android:background="@drawable/round_bac"
            android:padding="5dp"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/price_text_size"
            tools:text="@string/product_price" />

        <Button
            android:id="@+id/add_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_category"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/item_price"
            android:background="@drawable/but_sale_bac"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="10dp"
            android:text="@string/but_sale_label"
            android:textSize="12sp" />


    </RelativeLayout>

</android.support.v7.widget.CardView>

